--- a/resources/sass/custom.scss
+++ b/resources/sass/custom.scss
@@ -1,3 +1,11 @@
+.social-mail {
+  background: #bf9107 !important;
+  color: #fff !important;
+}
+.social-mail svg {
+  fill: #fff !important;
+}
+
 .item-100.height-40 {
   height: 35vh;
 }
