更新作品內頁樣式

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -47,13 +47,6 @@ li.hoverli:hover {
   }
 }
 
-.productImg {
-  width: 100%;
-  max-width: 100vw;
-  height: 80vh;
-  max-height: 100vh;
-}
-
 .main_productImg {
   width: 100vw;
   max-width: 100vw;
@@ -99,5 +92,33 @@ body.slides {
 
 .scrollhide {
   overflow: hidden !important;
+}
+
+.back {
+  margin-top: 60px;
+  margin-left: 30px;
+  color: #999999;
+  font-size: 27px;
+  display: block;
+}
+
+.back:hover {
+  color: #202020;
+}
+
+.productImg {
+  width: 100%;
+}
+
+.productData {
+  color: #999999;
+  font-size: 19px;
+  line-height: 22px;
+}
+
+.productcontent p {
+  color: #999999;
+  line-height: 33px;
+  font-size: 27px;
 }
 
