--- a/resources/sass/custom.scss
+++ b/resources/sass/custom.scss
@@ -46,13 +46,6 @@ li.hoverli:hover {
   }
 }
 
-.productImg{
-  width: 100%;
-  max-width: 100vw;
-  height: 80vh;
-  max-height: 100vh;
-}
-
 .main_productImg {
   width:100vw;
   max-width: 100vw;
@@ -108,4 +101,32 @@ body.slides {
 
 .scrollhide{
   overflow:hidden !important;
+}
+
+.back {
+  margin-top: 60px;
+  margin-left: 30px;
+  color: #999999;
+  font-size: 27px;
+  display: block;
+}
+
+.back:hover {
+  color: rgb(32, 32, 32);
+}
+
+.productImg {
+  width: 100%;
+}
+
+.productData {
+  color: rgb(153, 153, 153);
+  font-size: 19px;
+  line-height: 22px;
+}
+
+.productcontent p {
+  color: rgb(153, 153, 153);
+  line-height: 33px;
+  font-size: 27px;
 }
