--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -122,3 +122,47 @@ body.slides {
   font-size: 27px;
 }
 
+.mobileSearch {
+  font-size: 27px;
+  display: block !important;
+  padding-top: 15px !important;
+  padding-bottom: 15px !important;
+  padding-left: 22px !important;
+  background: #fafafa !important;
+  border: 1px solid #dddddd !important;
+  border-radius: 0 !important;
+}
+
+.mobileSearchList {
+  display: none;
+}
+
+.mobileSearchList ul li {
+  text-align: left;
+  font-size: 32px;
+  color: #999999;
+  padding-top: 25px;
+  padding-bottom: 19px;
+  padding-left: 22px;
+  border-bottom: 1px solid #dddddd;
+  cursor: pointer;
+}
+
+.desktopSearchList {
+  display: none;
+}
+
+.desktopSearchList ul li {
+  text-align: left;
+  font-size: 32px;
+  color: #999999;
+  padding-top: 0px !important;
+  padding-bottom: 0px !important;
+  padding-left: 25px !important;
+  cursor: pointer;
+}
+
+.desktopSearchList ul li a:hover {
+  color: #000000;
+}
+
