作品頁，調整桌面/手機版

--- a/resources/sass/custom.scss
+++ b/resources/sass/custom.scss
@@ -174,3 +174,9 @@ body.slides {
 .desktopSearchList ul li a:hover {
   color: #000000;
 }
+
+// .close {
+//   display: none !important;
+//   width: 20px;
+//   height: 20px;
+// }
