--- a/resources/sass/custom.scss
+++ b/resources/sass/custom.scss
@@ -143,16 +143,16 @@ body.slides {
 }
 
 .mobileSearchList {
-  display: none;
+  // display: none;
 }
 
 .mobileSearchList ul li {
   text-align: left;
   font-size: 32px;
   color: #999999;
-  padding-top: 25px;
-  padding-bottom: 19px;
-  padding-left: 22px;
+  padding-top: 5px !important;
+  padding-bottom: 5px !important;
+  padding-left: 25px !important;
   border-bottom: 1px solid #dddddd;
   cursor: pointer;
 }
@@ -175,8 +175,15 @@ body.slides {
   color: #000000;
 }
 
-// .close {
-//   display: none !important;
-//   width: 20px;
-//   height: 20px;
-// }
+.searchButton {
+  font-size: 27px;
+  display: block;
+  padding-top: 15px !important;
+  padding-bottom: 15px !important;
+  padding-left: 22px !important;
+  background: #fafafa !important;
+  border: 1px solid #dddddd !important;
+  width: 100%;
+  min-width: 150px;
+  color: #999999;
+}
