--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,3 +1,5 @@
+@charset "UTF-8";
+
 html,
 body {
   height: 100%;
@@ -192,5 +194,37 @@ ul.desktopSearchList li a:hover {
   position: fixed;
   float: left;
   -webkit-transform: translateZ(0);
+}
+
+.showForPhone {
+  position: none;
+}
+
+/* For portrait, 直向 */
+
+@media screen and (orientation: portrait) {
+  .bgWhite {
+    background-color: #fff;
+  }
+
+  .level-98 {
+    z-index: 98;
+  }
+}
+
+/* For landscape, 橫向 */
+
+@media screen and (orientation: landscape) {
+  .bgWhite {
+    background-color: #fff;
+  }
+
+  .level-98 {
+    z-index: 98;
+  }
+}
+
+.level-98 {
+  z-index: 98;
 }
 
