--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -18,7 +18,7 @@ body {
 .slides-form input[type=text].input-product-search {
   font-size: 32px;
   border: none;
-  min-width: 150px;
+  min-width: 250px;
 }
 
 .item-101 {
@@ -61,7 +61,6 @@ li.hoverli:hover {
 }
 
 .arrow-White {
-  background-color: rgba(255, 255, 255, 0.4);
   z-index: 2;
 }
 
@@ -77,6 +76,17 @@ body.slides {
 }
 
 .swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  /* Center slide text vertically */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.img-center {
+  width: 100%;
   text-align: center;
   font-size: 18px;
   background: #fff;
@@ -122,10 +132,27 @@ body.slides {
   line-height: 22px;
 }
 
-.productcontent p {
+.productcontent div.post-desc a,
+.productcontent div.post-desc p,
+.productcontent div.post-desc td,
+.productcontent div.post-desc th {
   color: #999999;
-  line-height: 33px;
-  font-size: 27px;
+}
+
+.productcontent div.post-desc div,
+.productcontent div.post-desc span,
+.productcontent div.post-desc li,
+.productcontent div.post-desc h1,
+.productcontent div.post-desc h2,
+.productcontent div.post-desc h3,
+.productcontent div.post-desc h4,
+.productcontent div.post-desc h5,
+.productcontent div.post-desc h6 {
+  color: #999999;
+}
+
+.photography-desc {
+  color: #999999;
 }
 
 ul.mobileSearchList li {
@@ -204,15 +231,15 @@ ul.desktopSearchList li a:hover {
   position: none;
 }
 
+.bgWhite {
+  background-color: #fff;
+}
+
 /* For portrait, 直向 */
 
 @media screen and (orientation: portrait) {
   .bgWhite {
     background-color: #fff;
-  }
-
-  .level-98 {
-    z-index: 98;
   }
 }
 
@@ -222,13 +249,33 @@ ul.desktopSearchList li a:hover {
   .bgWhite {
     background-color: #fff;
   }
-
-  .level-98 {
-    z-index: 98;
-  }
 }
 
-.level-98 {
-  z-index: 98;
+input[type=text].input-product-search.desktopSearch {
+  background-color: rgba(160, 160, 160, 0);
+}
+
+input[type=text].input-product-search:focus::-webkit-input-placeholder {
+  color: #242424;
+  font-weight: 400;
+  opacity: 0.5;
+}
+
+input[type=text].input-product-search:focus:-moz-placeholder {
+  color: #242424;
+  font-weight: 400;
+  opacity: 0.5;
+}
+
+input[type=text].input-product-search:focus::-moz-placeholder {
+  color: #242424;
+  font-weight: 400;
+  opacity: 0.5;
+}
+
+input[type=text].input-product-search:focus:-ms-input-placeholder {
+  color: #242424;
+  font-weight: 400;
+  opacity: 0.5;
 }
 
